--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   </style>
 </head>
 <body>
+  <body>
+  <div style="text-align:center; margin-bottom:20px;">
+    <img src="logo.png" alt="RJ Papad Logo" style="width:120px; border-radius:10px;" />
+  </div>
+
+  <h2>रजिस्टर करें (Mobile Number से)</h2>
   <h2>रजिस्टर करें (Mobile Number से)</h2>
   <div>
     <input id="name" placeholder="Name (optional)" />
