--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <body>
   <div style="text-align:center; margin-bottom:20px;">
-    <img src="logo.png" alt="RJ Papad Logo" style="width:120px; border-radius:10px;" />
+    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"alt="RJ Papad Logo" style="width:120px; border-radius:10px;" />
   </div>
 
   <h2>रजिस्टर करें (Mobile Number से)</h2>
