--- a/index.html
+++ b/index.html
@@ -5,27 +5,121 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>RJ Papad - Register</title>
   <style>
-    body { font-family: Arial, sans-serif; padding:20px; background:#fffbe6; }
-    input, button { padding:10px; margin:6px 0; width:100%; max-width:320px; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #fffbe6;
+      overflow: hidden;
+    }
+
+    /* Full Screen Logo (Splash Screen) */
+    #splash {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: radial-gradient(circle, #fffbe6 40%, #ffe69a 100%);
+      transition: opacity 1s ease;
+      z-index: 10;
+    }
+
+    #splash img {
+      width: 180px;
+      border-radius: 20px;
+      animation: zoomRotate 2s ease-in-out infinite alternate;
+    }
+
+    @keyframes zoomRotate {
+      from {
+        transform: scale(0.9) rotate(0deg);
+        opacity: 0.8;
+      }
+      to {
+        transform: scale(1.2) rotate(360deg);
+        opacity: 1;
+      }
+    }
+
+    /* Hidden Content (appears later) */
+    #content {
+      display: none;
+      padding: 20px;
+      text-align: center;
+      animation: fadeInUp 1s ease;
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    input, button {
+      padding: 10px;
+      margin: 6px 0;
+      width: 100%;
+      max-width: 320px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    button {
+      background: #ffcc33;
+      border: none;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background: #ffbb00;
+    }
+
+    pre {
+      background: #f4f4f4;
+      padding: 10px;
+      max-width: 600px;
+      margin: 0 auto;
+      border-radius: 6px;
+    }
   </style>
 </head>
 <body>
-  <body>
-  <div style="text-align:center; margin-bottom:20px;">
-    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"alt="RJ Papad Logo" style="width:120px; border-radius:10px;" />
+  <!-- Full Screen Logo -->
+  <div id="splash">
+    <img src="logo.png" alt="RJ Papad Logo" />
   </div>
 
-  <h2>रजिस्टर करें (Mobile Number से)</h2>
-  <h2>रजिस्टर करें (Mobile Number से)</h2>
-  <div>
-    <input id="name" placeholder="Name (optional)" />
-    <input id="mobile" placeholder="Mobile number (required)" />
-    <button id="registerBtn">Register</button>
-  </div>
+  <!-- Hidden Content -->
+  <div id="content">
+    <h2>रजिस्टर करें (Mobile Number से)</h2>
+    <div>
+      <input id="name" placeholder="Name (optional)" />
+      <input id="mobile" placeholder="Mobile number (required)" />
+      <button id="registerBtn">Register</button>
+    </div>
 
-  <pre id="result" style="background:#f4f4f4;padding:10px;max-width:600px;"></pre>
+    <pre id="result"></pre>
+  </div>
 
   <script>
+    // Hide splash and show content after 3 seconds
+    setTimeout(() => {
+      document.getElementById('splash').style.opacity = '0';
+      setTimeout(() => {
+        document.getElementById('splash').style.display = 'none';
+        document.body.style.overflow = 'auto'; // enable scrolling again
+        document.getElementById('content').style.display = 'block';
+      }, 1000);
+    }, 3000);
+
+    // Register form logic
     document.getElementById('registerBtn').addEventListener('click', async () => {
       const name = document.getElementById('name').value.trim();
       const mobile = document.getElementById('mobile').value.trim();
