--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <body>
   <!-- Full Screen Logo -->
   <div id="splash">
-    <img src="logo.png" alt="RJ Papad Logo" />
+    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"alt="RJ Papad Logo" />
   </div>
 
   <!-- Hidden Content -->
