--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       overflow: hidden;
     }
 
-    /* Splash Screen (Full Screen Logo + Buttons) */
+    /* Splash Screen */
     #splash {
       position: fixed;
       top: 0; left: 0; right: 0; bottom: 0;
@@ -21,7 +21,7 @@
       justify-content: center;
       align-items: center;
       background: radial-gradient(circle, #fffbe6 40%, #ffe69a 100%);
-      transition: opacity 1s ease;
+      transition: opacity 0.8s ease;
       z-index: 10;
     }
 
@@ -40,30 +40,46 @@
     .lang-buttons {
       margin-top: 30px;
       display: flex;
-      gap: 10px;
+      gap: 12px;
+      flex-wrap: wrap;
+      justify-content: center;
     }
+
     .lang-buttons button {
-      padding: 10px 16px;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 10px 18px;
       font-size: 16px;
       font-weight: bold;
       border: none;
       border-radius: 8px;
       cursor: pointer;
       transition: transform 0.2s, background 0.3s;
+      color: #000;
     }
+
+    .lang-buttons button img {
+      width: 22px;
+      height: 16px;
+      border-radius: 3px;
+      box-shadow: 0 0 3px rgba(0,0,0,0.3);
+    }
+
     .lang-buttons button:hover {
       transform: scale(1.1);
     }
+
     .hindi { background: #ffcc33; }
     .english { background: #33ccff; }
     .gujarati { background: #cc99ff; }
 
-    /* Hidden content */
+    /* Hidden Content */
     #content {
       display: none;
       padding: 20px;
       text-align: center;
-      animation: fadeInUp 1s ease;
+      animation: fadeInUp 0.8s ease;
     }
 
     @keyframes fadeInUp {
@@ -80,7 +96,7 @@
       border-radius: 5px;
     }
 
-    button {
+    button#registerBtn {
       background: #ffcc33;
       border: none;
       cursor: pointer;
@@ -88,7 +104,7 @@
       transition: background 0.3s;
     }
 
-    button:hover {
+    button#registerBtn:hover {
       background: #ffbb00;
     }
 
@@ -98,76 +114,104 @@
       max-width: 600px;
       margin: 0 auto;
       border-radius: 6px;
+      text-align: left;
     }
   </style>
 </head>
 <body>
-  <!-- Full Screen Logo -->
+  <!-- Splash Screen -->
   <div id="splash">
-    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"alt="RJ Papad Logo" />
+    <img src="logo.png" alt="RJ Papad Logo" />
     <div class="lang-buttons">
-      <button class="hindi" onclick="selectLang('hindi')">हिंदी</button>
-      <button class="english" onclick="selectLang('english')">English</button>
-      <button class="gujarati" onclick="selectLang('gujarati')">ગુજરાતી</button>
+      <button class="hindi" onclick="selectLang('hindi')">
+        <img src="https://flagcdn.com/w20/in.png" alt="IN"> हिंदी
+      </button>
+      <button class="english" onclick="selectLang('english')">
+        <img src="https://flagcdn.com/w20/gb.png" alt="EN"> English
+      </button>
+      <button class="gujarati" onclick="selectLang('gujarati')">
+        <img src="https://flagcdn.com/w20/in.png" alt="IN"> ગુજરાતી
+      </button>
     </div>
   </div>
 
   <!-- Hidden Content -->
   <div id="content">
-    <h2>रजिस्टर करें (Mobile Number से)</h2>
+    <h2 id="title">रजिस्टर करें (Mobile Number से)</h2>
     <div>
-      <input id="name" placeholder="Name (optional)" />
-      <input id="mobile" placeholder="Mobile number (required)" />
-      <button id="registerBtn">Register</button>
+      <input id="name" placeholder="नाम (वैकल्पिक)" />
+      <input id="mobile" placeholder="मोबाइल नंबर (अनिवार्य)" />
+      <button id="registerBtn">रजिस्टर करें</button>
     </div>
-
     <pre id="result"></pre>
   </div>
 
   <script>
-    let selectedLang = 'hindi'; // default language
+    const translations = {
+      hindi: {
+        title: "रजिस्टर करें (Mobile Number से)",
+        name: "नाम (वैकल्पिक)",
+        mobile: "मोबाइल नंबर (अनिवार्य)",
+        button: "रजिस्टर करें",
+        error: "❌ कृपया मोबाइल नंबर डालें"
+      },
+      english: {
+        title: "Register (Using Mobile Number)",
+        name: "Name (optional)",
+        mobile: "Mobile number (required)",
+        button: "Register",
+        error: "❌ Please enter your mobile number"
+      },
+      gujarati: {
+        title: "નોંધણી કરો (મોબાઇલ નંબરથી)",
+        name: "નામ (વૈકલ્પિક)",
+        mobile: "મોબાઇલ નંબર (જરૂરી)",
+        button: "નોંધણી કરો",
+        error: "❌ કૃપા કરીને મોબાઇલ નંબર દાખલ કરો"
+      }
+    };
+
+    let selectedLang = "hindi";
 
     function selectLang(lang) {
       selectedLang = lang;
-      // जब user language चुने, तो splash हटे और content दिखे
-      document.getElementById('splash').style.opacity = '0';
-      setTimeout(() => {
-        document.getElementById('splash').style.display = 'none';
-        document.body.style.overflow = 'auto';
-        document.getElementById('content').style.display = 'block';
 
-        // Language अनुसार heading बदलो
-        const heading = document.querySelector('h2');
-        if (lang === 'english') {
-          heading.textContent = 'Register (Using Mobile Number)';
-        } else if (lang === 'gujarati') {
-          heading.textContent = 'નોંધણી કરો (મોબાઇલ નંબરથી)';
-        } else {
-          heading.textContent = 'रजिस्टर करें (Mobile Number से)';
-        }
-      }, 1000);
+      const t = translations[lang];
+      document.getElementById("title").textContent = t.title;
+      document.getElementById("name").placeholder = t.name;
+      document.getElementById("mobile").placeholder = t.mobile;
+      document.getElementById("registerBtn").textContent = t.button;
+
+      // Splash hide -> show content
+      document.getElementById("splash").style.opacity = "0";
+      setTimeout(() => {
+        document.getElementById("splash").style.display = "none";
+        document.body.style.overflow = "auto";
+        document.getElementById("content").style.display = "block";
+      }, 800);
     }
 
     // Register form logic
-    document.getElementById('registerBtn').addEventListener('click', async () => {
-      const name = document.getElementById('name').value.trim();
-      const mobile = document.getElementById('mobile').value.trim();
+    document.getElementById("registerBtn").addEventListener("click", async () => {
+      const name = document.getElementById("name").value.trim();
+      const mobile = document.getElementById("mobile").value.trim();
+      const t = translations[selectedLang];
 
       if (!mobile) {
-        document.getElementById('result').innerText = '❌ कृपया मोबाइल नंबर डालें';
+        document.getElementById("result").innerText = t.error;
         return;
       }
 
       try {
-        const res = await fetch('/api/register', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
+        const res = await fetch("/api/register", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ name, mobile, lang: selectedLang })
         });
         const data = await res.json();
-        document.getElementById('result').innerText = JSON.stringify(data, null, 2);
+        document.getElementById("result").innerText = JSON.stringify(data, null, 2);
       } catch (err) {
-        document.getElementById('result').innerText = 'Error: ' + err.message;
+        document.getElementById("result").innerText = "Error: " + err.message;
       }
     });
   </script>
