--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       z-index: 10;
     }
 
-    #splash img {
+    /* केवल logo को animate करें */
+    #splash img.logo {
       width: 180px;
       border-radius: 20px;
       animation: zoomRotate 2s ease-in-out infinite alternate;
@@ -64,6 +65,8 @@
       height: 16px;
       border-radius: 3px;
       box-shadow: 0 0 3px rgba(0,0,0,0.3);
+      /* कोई animation नहीं */
+      transform: none !important;
     }
 
     .lang-buttons button:hover {
@@ -121,7 +124,7 @@
 <body>
   <!-- Splash Screen -->
   <div id="splash">
-    <img src="logo.png" alt="RJ Papad Logo" />
+    <img src="logo.png" alt="RJ Papad Logo" class="logo" />
     <div class="lang-buttons">
       <button class="hindi" onclick="selectLang('hindi')">
         <img src="https://flagcdn.com/w20/in.png" alt="IN"> हिंदी
@@ -175,14 +178,12 @@
 
     function selectLang(lang) {
       selectedLang = lang;
-
       const t = translations[lang];
       document.getElementById("title").textContent = t.title;
       document.getElementById("name").placeholder = t.name;
       document.getElementById("mobile").placeholder = t.mobile;
       document.getElementById("registerBtn").textContent = t.button;
 
-      // Splash hide -> show content
       document.getElementById("splash").style.opacity = "0";
       setTimeout(() => {
         document.getElementById("splash").style.display = "none";
@@ -191,7 +192,6 @@
       }, 800);
     }
 
-    // Register form logic
     document.getElementById("registerBtn").addEventListener("click", async () => {
       const name = document.getElementById("name").value.trim();
       const mobile = document.getElementById("mobile").value.trim();
