--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
   <!-- Splash Screen -->
   <div id="splash">
-    <img src="logo.png" alt="RJ Papad Logo" class="logo" />
+    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"alt="RJ Papad Logo" class="logo" />
     <div class="lang-buttons">
       <button class="hindi" onclick="selectLang('hindi')">
         <img src="https://flagcdn.com/w20/in.png" alt="IN"> हिंदी
