--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
   <!-- Splash Screen -->
   <div id="splash">
-    <img src="logo.png" alt="RJ Papad Logo" class="logo" />
+    <img src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_0000000040986208ae9fdd85a3a3cbc8.png"alt="RJ Papad Logo" class="logo" />
     <div class="lang-buttons">
       <button class="hindi" onclick="selectLang('hindi')">
         <img src="https://flagcdn.com/w20/in.png" alt="IN"> हिंदी
@@ -153,7 +153,7 @@
   <div id="content">
     <!-- ✅ पहला बैनर -->
     <div class="banner">
-      <img id="bannerTop" src="banner1-hindi.jpg" alt="Top Banner" />
+      <img id="bannerTop" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).pngbanner1-hindi.jpg" alt="Top Banner" />
     </div>
 
     <!-- 🌟 Welcome Text (भाषा अनुसार बदलेगा) -->
@@ -163,7 +163,7 @@
 
     <!-- ✅ दूसरा बैनर -->
     <div class="banner">
-      <img id="bannerBottom" src="banner2-hindi.jpg" alt="Bottom Banner" />
+      <img id="bannerBottom" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"alt="Bottom Banner" />
     </div>
 
     <!-- Registration Form -->
