--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <div id="content">
     <!-- ✅ पहला बैनर -->
     <div class="banner">
-      <img id="bannerTop" src="banner1-hindi.jpg" alt="Top Banner" />
+      <img id="bannerTop" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"alt="Top Banner" />
     </div>
 
     <!-- 🌟 Welcome Text (भाषा अनुसार बदलेगा) -->
