--- a/index.html
+++ b/index.html
@@ -151,10 +151,13 @@
 
   <!-- Hidden Content -->
   <div id="content">
-    <!-- ✅ पहला बैनर -->
-    <div class="banner">
-      <img id="bannerTop" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"alt="Top Banner" />
-    </div>
+    <!-- 🔰 पहला बैनर -->
+<div class="banner">
+  <img id="bannerTop"
+       src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000de7861faafb1b8052e9bd122%20(1).png"
+       alt="Top Banner"
+       style="width:100%; max-width:600px; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.15);" />
+</div>
 
     <!-- 🌟 Welcome Text (भाषा अनुसार बदलेगा) -->
     <div id="welcomeText" class="welcome-text">
