--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
     <!-- ✅ दूसरा बैनर -->
     <div class="banner">
-      <img id="bannerBottom" src="banner2-hindi.jpg" alt="Bottom Banner" />
+      <img id="bannerBottom" src="https://raw.githubusercontent.com/rjpapad111983-svg/Rjpapad-/refs/heads/main/file_00000000aac061fdacd52dbbf8a83410.png"alt="Bottom Banner" />
     </div>
 
     <!-- Registration Form -->
